# RLT_telegram_bot

./: .gitignore  README.md  config.py  docker-compose.dev.yml  enums.py  logger.py  main.py  pyproject.toml  schema.py
db/: __init__.py  mongo.py
services/: handlers.py
services/bot/: __init__.py  bot_handlers.py
